[package]
name = "schnorr"
version = "0.0.4"
description = "Schnorr Signatures"
authors = ["hello@organism.ai"]
license = "Apache-2.0"
repository = "https://github.com/stichtingorganism/schnorr"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "schnorr", "curve25519", "signature", "ECC"]
documentation = "https://docs.rs/schnorr"


[dependencies]
ed25519-dalek = { version =  "1.0.0-pre.1", features = ["serde"] }
curve25519-dalek = { version =  "1.0.0-pre.0", features = ["serde"] }
serde = "1.0"
rand = "0.6"
failure = "0.1"
clear_on_drop = "0.2"
blake2 = "0.8.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "schnorr_benchmarks"
harness = false

[features]
default = ["std", "u64_backend"]
std = ["ed25519-dalek/std"]
alloc = ["ed25519-dalek/alloc"]
nightly = ["ed25519-dalek/nightly", "rand/nightly", "clear_on_drop/nightly"]
u64_backend = ["ed25519-dalek/u64_backend"]
u32_backend = ["ed25519-dalek/u32_backend"]
avx2_backend = ["ed25519-dalek/avx2_backend"]
